--- a/news.html
+++ b/news.html
@@ -13,53 +13,50 @@ layout: default
 </head>
 <body>
 <h1>Top AI News Stories of the Week</h1>
-<h2>Title: Elon Musk hints at possible X partnership with Midjourney</h2>
-<h3>Source: ReadWrite</h3>
-<h4>Summary:</h4>
+<h2>Title: The Apple Car project is reportedly dead</h2>
+<h3>Source: Engadget</h3>
+<h3>Summary:</h3>
 <ul>
-<li>Elon Musk has hinted at a possible partnership between X and AI image generator Midjourney.</li>
-<li>The partnership could transform the user experience on the social media platform and enable AI generation of content.</li>
-<li>AI-generated content is already prevalent on social media, but this partnership could blur the lines between human and machine creativity.</li>
-<li>This move aligns with Musk's vision of developing X as an app for everything and establishing it at the forefront of AI integration within social media.</li>
+<li>Apple has officially canceled its Apple Car project after ten years, billions of dollars, and multiple leadership changes.</li>
+<li>The employees working on the car project will be transferred to Apple's artificial intelligence division to work on generative AI projects.</li>
+<li>Some hardware engineers and car designers from the car team may be able to apply for jobs in other divisions of the company, while the rest are likely to be laid off.</li>
+<li>Apple had initially aimed to build a fully self-driving car without pedals or a steering wheel but reportedly pared down its ambitions in recent years.</li>
+<li>The cancellation of the Apple Car project is seen as a rare setback for the company, which had worked on various aspects of the car's development, including powertrains, self-driving technology, and car interiors.</li>
 </ul>
-<a href="https://readwrite.com/elon-musk-hints-at-possible-x-partnership-with-midjourney/">Link</a>
+<a href="https://www.engadget.com/the-apple-car-project-is-reportedly-dead-203012885.html">Link</a>
 
-<h2>Title: How to Use AI for Sales Automation</h2>
-<h3>Source: ReadWrite</h3>
-<h4>Summary:</h4>
+<h2>Title: The Morning After: Apple's car project may be dead</h2>
+<h3>Source: Engadget</h3>
+<h3>Summary:</h3>
 <ul>
-<li>Sales automation using AI can help sales representatives perform tasks automatically, freeing up time for relationship development and deal closing.</li>
-<li>AI can be used to identify potential deals by predicting client intentions and focusing on leads that are most likely to buy.</li>
-<li>AI can improve communication quality by mining customer data and creating accurate profiles, allowing for more focused and personalized communication.</li>
-<li>AI-powered tools like Mixmax and Lavender can optimize sales emails and provide instant feedback, enhancing customer interaction.</li>
-<li>AI can automate repetitive tasks, such as customer feedback analysis and data collection, allowing sales and marketing teams to work more efficiently.</li>
-<li>Chatbots with built-in AI can provide 24/7 customer support, saving time for sales departments and providing immediate assistance to customers.</li>
-<li>AI mailing platforms can streamline email marketing processes, automating lead capture and follow-up sequences.</li>
-<li>AI can transcribe and analyze calls, providing valuable insights and enhancing the quality of customer interactions.</li>
+<li>Apple has reportedly canceled its Project Titan, also known as the Apple Car, after nearly a decade of development and multiple leadership changes.</li>
+<li>The company will move employees from the car project to its artificial intelligence division to focus on generative AI projects.</li>
+<li>Previous leaks suggested that the Apple Car was initially envisioned as a fully self-driving vehicle but later scaled down to a more standard electric vehicle.</li>
+<li>The cancellation of the Apple Car project leaves uncertainty about the company's plans in the automotive industry.</li>
 </ul>
-<a href="https://readwrite.com/automate-sales-ai/">Link</a>
+<a href="https://www.engadget.com/the-morning-after-apples-car-project-may-be-dead-121513763.html">Link</a>
 
-<h2>Title: Reddit reportedly signs $60million annual deal with AI company</h2>
+<h2>Title: Apple to scrap electric car project, much to Elon Musk’s delight</h2>
 <h3>Source: ReadWrite</h3>
-<h4>Summary:</h4>
+<h3>Summary:</h3>
 <ul>
-<li>Reddit has reportedly signed a $60 million annual deal with an unnamed AI company ahead of its initial public offering (IPO).</li>
-<li>The deal allows the AI company access to Reddit's material and content for the development of AI models.</li>
-<li>This move could be seen as a way for Reddit to attract more investors and expand its platform.</li>
-<li>Content licensing and partnerships with registered businesses are becoming increasingly important for AI companies to ensure the validity of their source materials and outputs.</li>
+<li>Apple is winding down its electric car project, Project Titan, and shifting its focus to artificial intelligence (AI).</li>
+<li>The decision to scrap the project shocked the nearly 2,000 employees involved and was celebrated by Tesla CEO Elon Musk.</li>
+<li>The car team employees will be transferred to Apple's AI division, led by executive John Giannandrea, but there may be potential layoffs.</li>
+<li>This move by Apple reflects wider changes in the automotive sector, with leading car manufacturers shifting their focus to hybrid vehicles due to high costs and insufficient charging facilities. Tesla, however, still plans to build new electric vehicles in mid-2025.</li>
 </ul>
-<a href="https://readwrite.com/reddit-reportedly-signs-60million-annual-deal-with-ai-company/">Link</a>
+<a href="https://readwrite.com/apple-to-scrap-electric-car-project-much-to-elon-musks-delight/">Link</a>
 
-<h2>Title: Google introduces advanced AI capabilities to advertisers through Gemini integration</h2>
+<h2>Title: Nvidia’s AI sector contributes to significant earnings boost</h2>
 <h3>Source: ReadWrite</h3>
-<h4>Summary:</h4>
+<h3>Summary:</h3>
 <ul>
-<li>Google plans to enhance its advertising products by integrating its Gemini artificial intelligence models, aiming to offer advanced AI capabilities to a broader range of customers.</li>
-<li>The integration of Gemini into Google's Performance Max product will allow advertisers to create more engaging ads with extended headlines of up to 90 characters.</li>
-<li>Google's AI model, Imagen 2, will enhance the image generation tool, enabling brands to create images featuring people for their ads.</li>
-<li>Safety measures have been implemented to prevent the misuse of generative AI, including restrictions on generating images of known individuals or content depicting violence, and watermarked synthetic images for transparency.</li>
+<li>Nvidia's AI sector has contributed to a 400% increase in data center earnings, thanks to the high quality of their graphics processing units (GPUs) and cutting-edge deep learning applications.</li>
+<li>Strategic partnerships with Google, Alibaba, and Microsoft have accelerated Nvidia's growth in the AI space.</li>
+<li>Nvidia's software strategy focuses on the integration of multiple open-source software components to create a strong AI software platform, ensuring consistent performance, enhanced security, and scalability.</li>
+<li>Nvidia's commitment to outperforming competitors is evident through an 18% increase in R&D investments and the adoption of a leading-edge software strategy across major cloud providers.</li>
 </ul>
-<a href="https://readwrite.com/google-introduces-advanced-ai-capabilities-to-advertisers-through-gemini-integration/">Link</a>
+<a href="https://readwrite.com/nvidias-ai-sector-contributes-to-significant-earnings-boost/">Link</a>
 
 </body>
 </html>
